[package]
name = "warpgrapher-actixweb"
version = "0.6.0"
authors = ["dev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-http = "2.2.0"
actix-net = "0.2.6"
actix-rt = "1.1.1"
actix-server-config = "0.2.0"
actix-service = "1.0.6"
actix-threadpool = "0.3.3"
actix-web = "3.3.2"
actix-cors = "0.5.3"
clap = "2.32.0"
futures = "0.3.8"
juniper = "0.15.1"
tokio = {version="0.2.22", features=["full"]}
warpgrapher = {path="/home/dev/projects/warpforge/warpgrapher", features=["neo4j"]}
