[package]
name = "warpgrapher-actixweb"
version = "0.11.2"
authors = ["dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.1.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"
clap = "3.2.7"
serde = "1.0.137"
serde_json = "1.0.82"
warpgrapher = { version="0.11.2", features=["cypher"]}
